# Sensor_Data_Logger

./: README.md  platformio.ini
esp32_logger_gui_template/: .gitignore  README.md  pyproject.toml
esp32_logger_gui_template/src/esp32_logger_gui/: csv_logger.py  main.py  protocol.py  serial_interface.py
esp32_logger_gui_template/src/esp32_logger_gui/gui/: app.py
lib/LoggerCore/: DataLogger.cpp  DataLogger.h  Sensor.h  SensorConfigs.h  SerialHandler.cpp  SerialHandler.h
lib/SensorDrivers/: AnalogSensor.cpp  AnalogSensor.h  DigitalSensor.cpp  DigitalSensor.h  HCSR04Sensor.cpp  HCSR04Sensor.h
logger_gui/: pyproject.toml
logger_gui/src/logger_gui/: csv_logger.py  device_panel.py  device_session.py  main.py  protocol.py  serial_interface.py
logger_gui/src/logger_gui/gui/: app.py
logger_gui/tests/: test_protocol.py
src/: SensorDefinitions.h  main.cpp
