[project]
name = "logger-gui"
version = "0.1.0"
description = "Python GUI for serial data logging"
authors = [{ name = "Sean" }]
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
logger_gui = "logger_gui.main:main"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
